<resources>
    <string name="app_name">CafeOrder</string>
    <string name="logo_description">Логотип кафе</string>
    <string name="welcome_description">Добро пожаловать</string>
    <string name="hint_name_description">Введите имя</string>
    <string name="hint_password_description">Введите пароль</string>
    <string name="default_name">Клиент</string>
    <string name="default_password">Пароль</string>
    <string name="button_create_order">Создать заказ</string>
    <string name="warning_fill_fields">Все поля должны быть заполненны</string>
    <string name="hello_user">Привет, %s! Что будете заказывать?</string>
    <string name="tea">Чай</string>
    <string name="coffee">Кофе</string>
    <string name="additions">Что добавить в ваш %s?</string>
    <string name="milk">Молоко</string>
    <string name="sugar">Сахар</string>
    <string name="lemon">Лемон</string>
    <string name="choose_type_drink">Выберите тип напитка</string>
    <string name="button_send_order">Кнопка отправить заказ</string>
    <string name="order">Имя: %s\nПароль: %s\nНапиток: %s\nТип напитка: %s\n</string>
    <string name="need_additions">Необходимые добавки: </string>

    <string-array name="options_of_coffee">
        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Латте</item>
    </string-array>

    <string-array name="options_of_tea">
        <item>Черный</item>
        <item>Красный</item>
        <item>Зеленый</item>
    </string-array>
</resources>